--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,12 @@ if (WIN32)
 endif ()
 
 find_package(Threads REQUIRED)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
+if(LINUX)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+else()
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_WIN32_WINNT=0x0602")
+endif()
 set(SOURCE_FILES main.cpp HostSvcCommon.h)
 add_executable(HostSvc ${SOURCE_FILES})
 add_executable(Client client.cpp HostSvcCommon.h)
