--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,15 +5,17 @@ if (WIN32)
     set(ASIO_INCLUDE "D:/asio-1.10.6/include" CACHE PATH "ASIO库的include目录")
     include_directories(${ASIO_INCLUDE})
 
-endif ()
+endif (WIN32)
 
 find_package(Threads REQUIRED)
 
-if(LINUX)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-else()
+if (WIN32)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_WIN32_WINNT=0x0602")
-endif()
+else(WIN32)
+
+    message("LINUX")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+endif(WIN32)
 set(SOURCE_FILES main.cpp HostSvcCommon.h)
 add_executable(HostSvc ${SOURCE_FILES})
 add_executable(Client client.cpp HostSvcCommon.h)
