--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,11 @@
-cmake_minimum_required(VERSION 3.5)
+﻿cmake_minimum_required(VERSION 3.5)
 project(HostSvc)
 
 if (WIN32)
     set(ASIO_INCLUDE "D:/asio-1.10.6/include" CACHE PATH "ASIO库的include目录")
     include_directories(${ASIO_INCLUDE})
+    set(PROTOBUF_INCLUDE "D:/protobuf-2.6.1/src" CACHE PATH "protobuf库的include目录")
+    include_directories(${PROTOBUF_INCLUDE})
 
 endif (WIN32)
 
