--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ find_package(Protobuf REQUIRED)
 include_directories(${PROTOBUF_INCLUDE_DIRS})
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS example.proto)
-add_executable(HostSvc ${SOURCE_FILES}  ${PROTO_SRCS} ${PROTO_HDRS})
+add_executable(HostSvc clientManager.hpp  ${SOURCE_FILES}  ${PROTO_SRCS} ${PROTO_HDRS})
 add_executable(Client client.cpp HostSvcCommon.h  ${PROTO_SRCS} ${PROTO_HDRS} RPCController.h)
 target_link_libraries(Client ${CMAKE_THREAD_LIBS_INIT}  ${PROTOBUF_LIBRARIES})
 target_link_libraries(HostSvc ${CMAKE_THREAD_LIBS_INIT}  ${PROTOBUF_LIBRARIES})
