--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,13 +17,13 @@ else(WIN32)
     message("LINUX")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lprotobuf -lz")
 endif(WIN32)
-set(SOURCE_FILES main.cpp HostSvcCommon.h RPCChannel.h TestObject.h ServiceImpl.h)
+set(SOURCE_FILES server.cpp HostSvcCommon.hpp RPCChannel.hpp TestObject.h ServiceImpl.hpp RealObjectBase.hpp ProxyObjectBase.hpp)
 find_package(Protobuf REQUIRED)
 include_directories(${PROTOBUF_INCLUDE_DIRS})
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS example.proto)
-add_executable(HostSvc clientManager.hpp  ${SOURCE_FILES}  ${PROTO_SRCS} ${PROTO_HDRS} TestObject.h ServiceImpl.h)
-add_executable(Client client.cpp HostSvcCommon.h  ${PROTO_SRCS} ${PROTO_HDRS} RPCController.h TestObject.h ServiceImpl.h)
+add_executable(HostSvc clientManager.hpp  ${SOURCE_FILES}  ${PROTO_SRCS} ${PROTO_HDRS} TestObject.h ServiceImpl.hpp RealObjectBase.hpp ProxyObjectBase.hpp)
+add_executable(Client client.cpp HostSvcCommon.hpp ${PROTO_SRCS} ${PROTO_HDRS} RPCController.hpp TestObject.h ServiceImpl.hpp RealObjectBase.hpp ProxyObjectBase.hpp)
 target_link_libraries(Client ${CMAKE_THREAD_LIBS_INIT}  ${PROTOBUF_LIBRARIES})
 target_link_libraries(HostSvc ${CMAKE_THREAD_LIBS_INIT}  ${PROTOBUF_LIBRARIES})
 
